--- a/styles.css
+++ b/styles.css
@@ -55,11 +55,37 @@ body {
 
 .details1 {
   margin-top: 30px;
+  overflow: hidden;
 }
 
 .det {
   font-size: 22px;
   line-height: 30px;
+  color: #032c4e;
+}
+
+#animation {
+  animation-name: animations ;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-direction: slide-down;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+@keyframes animations {
+  0% {
+    transform: translateY(5px);
+    opacity: 1
+  }
+  50% {
+    opacity: 1
+  }
+  100% {
+    transform: translateY(0px);
+    opacity: 0
+  }
 }
 
 #home_h5 {
@@ -91,6 +117,9 @@ body {
   background-color: #fff;
   color: #0a5ea3;
   text-decoration: none;
+}
+.btnn a {
+  color: white;
 }
 
 #image {
@@ -364,11 +393,24 @@ body {
   margin: 1rem;
   padding: 1.3rem 0;
   line-height: 34px;
+  transition: transform 300ms ease, 
+  webkit-transform 300ms ease;
 }
 
-.cards:focus{
-  outline: 3px solid black;
-  outline-offset:3px;
+.cards:hover{
+  /*outline: 3px 2px 10px grey;
+  outline-offset:1px;
+  box-shadow: 3px 2px 10px black;
+  transform: scale(1.2);*/
+  -webkit-transform: scale(1.030);
+  transform: scale(1.030);
+  border: 1px solid gray;
+
+}
+
+.con1:hover{
+  transform: scale(1.1);
+  box-shadow: 3px 2px 10px grey;
 }
 
 #contact-icons {
